--- a/Lead Score Case Study Sunny punia .ipynb
+++ b/Lead Score Case Study Sunny punia .ipynb
@@ -16111,7 +16111,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "It was found that the variables that mattered the most in the potential buyers are (In descending order) :\n",
+    "It was found that the variables that mattered the most in the potential buyers are :\n",
     "1.\tThe total time spend on the Website.\n",
     "2.\tTotal number of visits.\n",
     "3.\tWhen the lead source was: <br>\n",
